--- a/package.json
+++ b/package.json
@@ -1,4 +1,15 @@
 {
+  "name": "lines-san",
+  "version": "1.0.0",
+  "description": "Le japonais facile !",
+  "workspaces": {
+    "packages": [
+      "packages/*"
+    ]
+  },
+  "scripts": {
+    "start": "npm run start -w client"
+  },
   "dependencies": {
     "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.3"
