--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "start": "npm run start -w client"
   },
   "dependencies": {
+    "@radix-ui/colors": "^0.1.8",
+    "axios": "^1.1.3",
     "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.3"
   }
