--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@radix-ui/colors": "^0.1.8",
     "axios": "^1.1.3",
+    "formik": "^2.2.9",
     "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.3"
   }
